--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-image: url("/static/mesh-gradient.png");
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 @font-face {
@@ -45,14 +44,14 @@ a {
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  html,
   body {
-    color: white;
-    background: black;
+    color-scheme: dark;
+    background-color: black;
     background: url("/static/mesh-gradient.png") center no-repeat;
     background-size: cover;
+  }
+  body {
     color: #3d3d3d;
   }
 }
