--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,6 @@
   align-items: center;
 }
 
-
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -61,7 +60,6 @@
   right: 5%;
   z-index: 1;
   width: 50%;
-
 }
 
 .heroImage {
@@ -79,6 +77,10 @@
 
 .card {
   justify-content: center;
+}
+
+.regionWrapper {
+  margin-top: 5em;
 }
 
 .h2 {
